@@ -1,6 +1,8 @@
 0.11.0
 ------
 
+* Table.join now raises ColumnDoesNotExistError. (#264)
+* Table.select now raises ColumnDoesNotExistError.
 * computations.ZScores moved into agate-stats.
 * computations.Rank cmp argument renamed comparer.
 * aggregations.MaxPrecision added. (#265)
